; ModuleID = '/home/carl/AnghaBench/esp-idf/components/coap/port/extr_coap_debug.c_coap_debug_send_packet.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/coap/port/extr_coap_debug.c_coap_debug_send_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@send_packet_count = common dso_local global i64 0, align 8
@num_packet_loss_intervals = common dso_local global i32 0, align 4
@packet_loss_intervals = common dso_local global %struct.TYPE_2__* null, align 8
@packet_loss_level = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @coap_debug_send_packet() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = load i64, i64* @send_packet_count, align 8
  %5 = add nsw i64 %4, 1
  store i64 %5, i64* @send_packet_count, align 8
  %6 = load i32, i32* @num_packet_loss_intervals, align 4
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %37

8:                                                ; preds = %0
  store i32 0, i32* %2, align 4
  br label %9

9:                                                ; preds = %33, %8
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @num_packet_loss_intervals, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %36

13:                                               ; preds = %9
  %14 = load i64, i64* @send_packet_count, align 8
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @packet_loss_intervals, align 8
  %16 = load i32, i32* %2, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp sge i64 %14, %20
  br i1 %21, label %22, label %32

22:                                               ; preds = %13
  %23 = load i64, i64* @send_packet_count, align 8
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @packet_loss_intervals, align 8
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = icmp sle i64 %23, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  store i32 0, i32* %1, align 4
  br label %49

32:                                               ; preds = %22, %13
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %2, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %2, align 4
  br label %9

36:                                               ; preds = %9
  br label %37

37:                                               ; preds = %36, %0
  %38 = load i64, i64* @packet_loss_level, align 8
  %39 = icmp sgt i64 %38, 0
  br i1 %39, label %40, label %48

40:                                               ; preds = %37
  store i64 0, i64* %3, align 8
  %41 = bitcast i64* %3 to i32*
  %42 = call i32 @prng(i32* %41, i32 2)
  %43 = load i64, i64* %3, align 8
  %44 = load i64, i64* @packet_loss_level, align 8
  %45 = icmp slt i64 %43, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %40
  store i32 0, i32* %1, align 4
  br label %49

47:                                               ; preds = %40
  br label %48

48:                                               ; preds = %47, %37
  store i32 1, i32* %1, align 4
  br label %49

49:                                               ; preds = %48, %46, %31
  %50 = load i32, i32* %1, align 4
  ret i32 %50
}

declare dso_local i32 @prng(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
